# model-runner

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: config_example.json  example_runner.py  run.py
model_runner/: __main__.py  utils.py
model_runner/_tests/: test_utils.py
model_runner/dispatcher/: dispatcher.py  dispatcher_utils.py
model_runner/dispatcher/_tests/: test_dispatcher_utils.py
model_runner/validator/: __init__.py  validator_utils.py
model_runner/validator/_tests/: test_validator.py  test_validator_utils.py  validator_test_fixtures.py
