[metadata]
name = model-runner
author = Daniel Schirmacher and Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3
url = https://github.com/kevinyamauchi/model-runner
description = a job runner
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/model-runner/issues
    Documentation = 'https://github.com/kevinyamauchi/model-runner#README.md'
    Source Code = https://github.com/kevinyamauchi/model-runner
    User Support = https://github.com/kevinyamauchi/model-runner/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    pandas
    pydantic

[options.extras_require]
dev =
    pre-commit>=2.9.0
    black==20.8b1
    flake8==3.8.4
    check-manifest>=0.42
    pytest

[options.entry_points]
console_scripts =
    model_dispatcher = model_runner.dispatcher:main

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = _vendor,vendored,__init__.py,examples,benchmarks,napari/resources/_qt_resources*.py
